<resources>
    <string name="app_name">FirebaseAuthentication</string>
    <string name="name">Nombre de Usuario</string>
    <string name="email">Correo Electronico</string>
    <string name="pass">Contraseña</string>
    <string name="registration">Registrar Usuario</string>
    <string name="admin">Administrador</string>
    <string name="user">Usuario</string>
    <string name="userActivity">Activity de Usuario</string>
    <string name="adminActivity">Activity de Admin</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="login">Iniciar Sesión</string>
</resources>